Añado párrafo al index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Bienvenido a mi proyecto</h1>
     <p>Esto es una página de ejemplo.</p>
+	<p> Esta parrafo lo ha escrito Gabriel Esteban<p>
 </body>
 </html>
